--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -1,5 +1,7 @@
 \section{Related Work}
-\paragraph{Web Dynamics.} % Web page changes every 90 days on average...
+\label{sec:related-work}
+
+\paragraph{Web Dynamics.}
 Temporal dynamics in web search are an established research topic. Websites change constantly; for example Adar et al.~\cite{DBLP:conf/wsdm/AdarTDE09}, found as early as 2009 that ``a large portion of pages changing more than houherly.'' Thereby, websites are often only relevant for a limited time~\cite{DBLP:conf/sigir/TikhonovBBOKG13}. This relates directly to the observation that many queries are not unique but issued frequently~\cite{DBLP:conf/sigir/Dumais14,DBLP:journals/sigir/SilversteinHMM99}. Even the same users tend to repeat the same queries at different points in time~\cite{DBLP:conf/wsdm/TylerT10}.
 
 \paragraph{Temporal Information Retrieval}
