--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -38,16 +38,6 @@
   year={2021}
 }
 
-
-@inproceedings{froebe-mis:2022,
-  title={Using Keyqueries to Reduce Misinformation in Health-Related Search Results.},
-  author={Fr{\"o}be, Maik and G{\"u}nther, Sebastian and Bondarenko, Alexander and Huck, Johannes and Hagen, Matthias},
-  booktitle={ROMCIR@ ECIR},
-  pages={1--10},
-  year={2022}
-}
-
-
 @InProceedings{froebe:2022d,
   address =                  {Berlin Heidelberg New York},
   annotate =                 {acceptance rate: 0.71 (10 / 14)},
@@ -76,6 +66,22 @@
   site =                     {Dublin},
   title =                    {{From Keywords to Keyqueries: Content Descriptors for the Web}},
   year =                     2013
+}
+
+@InProceedings{hagen:2016b,
+  address =                  {Berlin Heidelberg New York},
+  author =                   {Matthias Hagen and Anna Beyer and Tim Gollub and Kristof Komlossy and Benno Stein},
+  booktitle =                {Advances in Information Retrieval. 38th European Conference on IR Research (ECIR 2016)},
+  doi =                      {10.1007/978-3-319-30671-1_37},
+  editor =                   {Nicola Ferro and Fabio Crestani and Marie-Francine Moens and Josiane Mothe and Fabrizio Silvestri and {Giorgio Maria} {Di Nunzio} and Claudia Hauff and Gianmaria Silvello},
+  month =                    mar,
+  pages =                    {507--520},
+  publisher =                {Springer},
+  series =                   {Lecture Notes in Computer Science},
+  site =                     {Padua, Italy},
+  title =                    {{Supporting Scholarly Search with Keyqueries}},
+  volume =                   9626,
+  year =                     2016
 }
 
 @article{jaleel:2004,
