--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -11,7 +11,8 @@ These observations motivate Temporal Information Retrieval (TIR) as a research a
 Tangental to TIR, caching in IR is also concerned with changes in documents and queries but rather motivated by efficiency~\cite{DBLP:conf/www/CambazogluJPBCLB10,DBLP:conf/sigir/Baeza-YatesGJMPS07}. Since a large portion of queries are issued more than once, caching the results can save time and computation at the cost of recency.
 
 
-\paragraph{Query Rewriting with Keyqueries.} {\color{red} Maik.}
+\paragraph{Query Rewriting with Keyqueries.} {\color{red} Maik.} Originally formulated for a single document~\cite{gollub:2013a}, later expanded for a set of documents~\cite{hagen:2016b}. Using RM3 to find candidates~\cite{froebe:2022d}, combined with efficient enumeration and pruning~\cite{froebe:2021c}.
+
 Things that sound related but are not yet checked/incorporated are appended to this sentence~\cite{li:2022}.
 
 \paragraph{Evaluations in Dynamic Settings}
