--- a/paper/ecir25-longeval-lit.bib
+++ b/paper/ecir25-longeval-lit.bib
@@ -225,7 +225,19 @@
   year         = {2024}
 }
 
-@inproceedings{DBLP:conf/clef/AlkhalifaBBCDEA23,
+@inproceedings{galuscakova:2023,
+  author       = {Petra Galusc{\'{a}}kov{\'{a}} and Romain Deveaud and Gabriela Gonz{\'{a}}lez S{\'{a}}ez and Philippe Mulhem and Lorraine Goeuriot and Florina Piroi and Martin Popel},
+  editor       = {Hsin{-}Hsi Chen and Wei{-}Jou (Edward) Duh and Hen{-}Hsen Huang and Makoto P. Kato and Josiane Mothe and Barbara Poblete},
+  title        = {LongEval-Retrieval: French-English Dynamic Test Collection for Continuous Web Search Evaluation},
+  booktitle    = {Proceedings of the 46th International {ACM} {SIGIR} Conference on Research and Development in Information Retrieval, {SIGIR} 2023, Taipei, Taiwan, July 23-27, 2023},
+  pages        = {3086--3094},
+  publisher    = {{ACM}},
+  year         = {2023},
+  doi          = {10.1145/3539618.3591921}
+}
+
+
+@inproceedings{alkhalifa:2023,
   author       = {Rabab Alkhalifa and
                   Iman Munire Bilal and
                   Hsuvas Borkakoty and
