--- a/paper/ecir25-longeval-part4.tex
+++ b/paper/ecir25-longeval-part4.tex
@@ -1,5 +1,7 @@
 \section{Evaluation}
 
+We evaluate xyz using the LongEval datasets that come with overlapping queries accross 6~timestamps between July 2022~to August~2023~\cite{alkhalifa:2023,alkhalifa:2024,galuscakova:2023}. First, we study how overlap behaves by measuring the similarity and contrasting x with y, then, we conduct retrieval experiments and an ablation study.
+
 \subsection{Experimental Setup}
 
 
