--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -18,4 +18,4 @@ Things that sound related but are not yet checked/incorporated are appended to t
 \paragraph{Evaluations in Dynamic Settings.}
 While it is well known that the described dynamics can have a strong influence on the effectiveness of IR systems, the temporal dimension is rarely considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Following this line, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario with a test collection that covers a time frame of over a year in multiple snapshots.
 
-Recently, changes in evolving test collections have been classified on a high level along their main components, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage by Keller et al. in~\cite{keller:2024}. While the LongEval dataset contains changes in all types of components, the approaches investigated in this study are mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
+Recently, changes in evolving test collections have been classified on a high level along their main components, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage~\cite{keller:2024}. While the LongEval dataset contains changes in all types of components, the approaches investigated in this study are mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
