minor fixed in part3

--- a/paper/ecir25-longeval-part3.tex
+++ b/paper/ecir25-longeval-part3.tex
@@ -12,8 +12,7 @@ All of our approaches use a set $H$~of historical relevance feedback. For each o
 While this qrel boosting is highly effective when documents do not change~\cite{alkhalifa:2024,keller:2024b}, it can not generalize to new or deleted documents.
 
 
-\paragraph{Previously Relevant Documents as Explicit Relevance Feedback.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we expand each query with the $k$~terms with the highest TF-IDF scores of previously known relevant documents for a query. Formally, for a query $q$, the set of $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ specifies the positive documents on which we calculate TF, whereas we counterfactually calculate IDF on $D^{+} \cup D$ to obtain $k$~expansion terms with the highest TF-IDF that are appended to the query and the expanded query is submitted against the retrieval system on the current document corpus $D$ to yield the final ranking. This query expansion approach allows to generalize from the historical relevance feedback to potentially deleted or newly created documents. However, 
-Improving on this baseline, a tf-idf query expansion based on previously relevant documents wes tested. Instead of directly boosting known relevant query document pairs, the top 10 tf-idf terms from the relevant documents are used to expand the original query. The expanded query is then used to query the corpus with BM25. Like the qrel boost approach before, the tf-idf query expansion also only affects topics that are already known but can generalize to new documents.
+\paragraph{Previously Relevant Documents as Explicit Relevance Feedback.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we expand each query with the $k$~terms with the highest tf-idf scores of previously known relevant documents for a query. Formally, for a query $q$, the set of $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ specifies the positive documents on which we calculate tf, whereas we counterfactually calculate IDF on $D^{+} \cup D$ to obtain $k$~expansion terms with the highest tf-idf that are appended to the query and the expanded query is submitted against the retrieval system on the current document corpus $D$ to yield the final ranking. This query expansion approach allows to generalize from the historical relevance feedback to potentially deleted or newly created documents. However, improving on this baseline, a tf-idf query expansion based on previously relevant documents was tested. Instead of directly boosting known relevant query document pairs, the top 10 tf-idf terms from the relevant documents are used to expand the original query. The expanded query is then used to query the corpus with BM25. Like the qrel boost approach before, the tf-idf query expansion also only affects topics that are already known but can generalize to new documents.
 
 
 \paragraph{Keyqueries for Previously Relevant Documents.} Given a retrieval model, the current document corpus~$D$, and a set of historical relevance feedback~$H$, we build keyqueries~\cite{froebe:2021c,gollub:2013a,hagen:2016b} against the previously relevant documents. A query $q_{k}$ is a keyquery for the set of target documents $D^{+} = \{d| (q,d,t) \in H \wedge rel(q,d,t) > 0\}$ previously known as relevant for a query~$q$ against the corpus $D^{+} \cup D$ for the given retrieval model, iff \Ni every $d \in D^{+}$ is in the top-$k$ results, \Nii $q_{k}$ has more than $l$ results, and \Niii no subquery $q^{'}_{k} \subset q_{k}$ satisfies the above. Out of those keyquery criteria, the first one ensures the specificity, the second one the generality, and the third one the minimality of the keyquery, together allowing to prevent overfitting while beeing more tailored towards the target documents $D^{+}$. Traditional relevance feedback does not check the position of its feedback documents in the resulting rankings, whereas keyqueries explicitly check query candidates thereby can remove overfitted or underfitted candidates. To generate keyquery candidates, we re-implement a previous algorithm~\cite{froebe:2022d} in PyTerrier~\cite{macdonald:2020} that selects the top-10 terms with RM3 and traverses the power-set of potential queries constructed from those 10~terms. If multiple candidates are keyqueries, we use the one with the highest nDCG@10 against the previously known relevant documents $D^{+}$. Finally, the keyquery is submitted against the corpus $D$ that might, or might not, contain the documents previously known as relevant.
