--- a/paper/table-results-fold.tex
+++ b/paper/table-results-fold.tex
@@ -1,31 +1,20 @@
 \begin{table}[t]
 \small
 \centering
-\renewcommand{\tabcolsep}{3.2pt}
+\renewcommand{\tabcolsep}{2.8pt}
 \caption{Synthetically evolved.}
 \label{tab:table-results-fold}
 
-\begin{tabular}{@{}l@{}cccccccccc@{}}
+\begin{tabular}{@{}lcccccccccc@{}}
     \toprule
-    \bfseries System & \multicolumn{5}{c}{\bfseries nDCG@10} & \multicolumn{5}{c}{\bfseries nDCG@10$^{'}$}\\
-    \cmidrule(r@{.25em}){2-6}
-    \cmidrule(l@{.25em}){7-11}
-    
-    & 07/23 & 09/23 & 01/24 & 06/24 & 08/24 & 07/23 & 09/23 & 01/24 & 06/24 & 08/24\\
+    \bfseries System & \bfseries 07/23 & \bfseries 09/23 & \bfseries 01/24 & \bfseries 06/24 & \bfseries 08/24 \\
     
     \midrule
 
-    BM25 & .118 & .152 & .144 & .141 & .120 & .373 & .418 & .451 & .405 & .343 \\
-    ColBERT & .153 & .173 & .166 & .151 & .138 & .314 & .346 & .360 & .338 & .285 \\
-    List-in-T5 & .155 & .171 & .172 & .162 & .146 & .313 & .349 & .364 & .342 & .284 \\
-    monoT5 & .155 & .183 & .167 & .166 & .141 & .316 & .347 & .355 & .341 & .283 \\
     
-    \midrule
-    
-    BM25$_{Boost}$ & \bfseries .277 & \bfseries .276 & \bfseries .235 & \bfseries .278 & \bfseries .184 & \bfseries .437 & \bfseries .472 & \bfseries .486 & \bfseries .454 & .363 \\
-    BM25$_{RM3}$ & .112 & .150 & .134 & .142 & .122 & .377 & .415 & .455 & .410 & .352 \\
-    BM25$_{RF}$ & .225 & .237 & .203 & .230 & .156 & .468 & .494 & .510 & .463 & .369 \\
-    BM25$_{keyquery}$ & .195 & .236 & .180 & .180 & .147 & .424 & .467 & .481 & .436 & \bfseries.368 \\
+    BM25$_{Boost}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ & +0.000$^{\phantom{*}}_{\color{gray}\pm.000}$ \\
+    BM25$_{RF}$ & +0.015$^{\phantom{*}}_{\color{gray}\pm.203}$ & +0.022$^{\phantom{*}}_{\color{gray}\pm.161}$ & +0.034$^{*}_{\color{gray}\pm.138}$ & +0.013$^{\phantom{*}}_{\color{gray}\pm.092}$ & -0.002$^{\phantom{*}}_{\color{gray}\pm.093}$ \\
+    BM25$_{keyquery}$ & \bfseries +0.152$^{*}_{\color{gray}\pm.293}$ & \bfseries  +0.115$^{*}_{\color{gray}\pm.276}$ & \bfseries  +0.113$^{*}_{\color{gray}\pm.217}$ & \bfseries  +0.091$^{*}_{\color{gray}\pm.167}$ & \bfseries +0.040$^{*}_{\color{gray}\pm.169}$ \\
 
 \bottomrule
 \end{tabular}
