--- a/paper/ecir25-longeval-part2.tex
+++ b/paper/ecir25-longeval-part2.tex
@@ -1,21 +1,19 @@
 \section{Related Work}
 \label{sec:related-work}
 
-\paragraph{Web Dynamics.}
+% \paragraph{Web Dynamics.}
 Temporal dynamics in web search are an established research topic. Websites change constantly; for example Adar et al.~\cite{DBLP:conf/wsdm/AdarTDE09}, found as early as 2009 that ``a large portion of pages changing more than houherly.'' Thereby, websites are often only relevant for a limited time~\cite{DBLP:conf/sigir/TikhonovBBOKG13}. This relates directly to the observation that many queries are not unique but issued frequently~\cite{DBLP:conf/sigir/Dumais14,DBLP:journals/sigir/SilversteinHMM99}. Even the same users tend to repeat the same queries at different points in time~\cite{DBLP:conf/wsdm/TylerT10}.
 
-\paragraph{Temporal Information Retrieval.}
-These observations motivate Temporal Information Retrieval (TIR) as a research area with the overmost goal to factor temporal information to improve the ranking quality~\cite{DBLP:journals/ftir/KanhabuaBN15,DBLP:journals/csur/CamposDJJ14}. For example, Elsas and Dumais propose a ranking algorithm that incormporates temporal patterns for term weights~\cite{DBLP:conf/wsdm/ElsasD10}. Although the proposed approaches take place in a temporal setting, they differ from TIR since no temporal features are considered directly. Instead, the opposite, counterfactually, the elapsed time between searches or any changes in documents are ignored, which makes the approach effective yet accessible.
+% \paragraph{Temporal Information Retrieval.}
+These observations motivate Temporal Information Retrieval (TIR) as a research area with the overmost goal to factor temporal information to improve the ranking quality~\cite{DBLP:journals/ftir/KanhabuaBN15,DBLP:journals/csur/CamposDJJ14}. For example, Elsas and Dumais propose a ranking algorithm that incormporates temporal patterns for the term weighting~\cite{DBLP:conf/wsdm/ElsasD10}. Although the proposed approaches take place in a temporal setting, they differ from TIR since no temporal features are considered directly. Instead, the opposite, counterfactually, the elapsed time between searches or any changes in documents are ignored, which makes the approach effective yet accessible.
 
-\paragraph{Caching in IR.}
+% \paragraph{Caching in IR.}
 Tangental to TIR, caching in IR is also concerned with changes in documents and queries but rather motivated by efficiency~\cite{DBLP:conf/www/CambazogluJPBCLB10,DBLP:conf/sigir/Baeza-YatesGJMPS07}. Since a large portion of queries are issued more than once, caching the results can save time and computation at the cost of recency.
 
 
 \paragraph{Query Rewriting with Keyqueries.} {\color{red} Maik.} Originally formulated for a single document~\cite{gollub:2013a}, later expanded for a set of documents~\cite{hagen:2016b}. Using RM3 to find candidates~\cite{froebe:2022d}, combined with efficient enumeration and pruning~\cite{froebe:2021c}.
 
-Things that sound related but are not yet checked/incorporated are appended to this sentence~\cite{li:2022}.
+% Things that sound related but are not yet checked/incorporated are appended to this sentence~\cite{li:2022}.
 
-\paragraph{Evaluations in Dynamic Settings.}
-While it is well known that the described dynamics can have a strong influence on the effectiveness of IR systems, the temporal dimension is rarely considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Following this line, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario with a test collection that covers a time frame of over a year in multiple snapshots.
-
-Recently, changes in evolving test collections have been classified on a high level along their main components, the documents, topics, and qrels, and the create, update, and delete operation of persistent storage~\cite{keller:2024}. While the LongEval dataset contains changes in all types of components, the approaches investigated in this study are mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
+% \paragraph{Evaluations in Dynamic Settings.}
+While it is well known that the temporal dynamics can have a strong influence on the effectiveness of IR systems, the temporal dimension is rarely considered during evaluation. Soboroff~\cite{DBLP:conf/sigir/Soboroff06} initially investigated how temporal dynamics influence test collection evaluations and hypothesized how they could be maintained. Following this line of research, the LongEval shared task~\cite{DBLP:conf/clef/AlkhalifaBDEAFG24,alkhalifa:2023} provides a test bed of an evolving web search scenario with a test collection that covers a time frame of over a year in multiple snapshots. Changes in evolving test collections can been described on a high level along the main components, the documents, topics, and qrels, and the create, update, and delete operations~\cite{keller:2024}. While the LongEval dataset contains changes in all types of components, this study is mainly concerned with changing documents and ignore, counterfactually, changes in the relevance label.
