--- a/paper/ecir25-longeval-sum.tex
+++ b/paper/ecir25-longeval-sum.tex
@@ -1,3 +1,6 @@
 \section{Conclusion and Future Work}
+In this work, we explored the capabilities of query rewriting based on historical relevance signals in a dynamic setting. We presented approaches that use documents previously indicated by a click model as relevant to rewrite the query and investigate how well they generalize to the evolving search setting.The results show that XY.
+
+
 
 TBD.
